# Mirai

./: pyproject.toml
onconet/models/: aggregate_feat_maps.py  aggregator.py  cumulative_probability_layer.py  custom_resnet.py
scripts/: dispatcher.py  get_dataset_stats.py  main.py
