[build-system]
requires = [
    "setuptools>=60",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Mirai"
version = "0.1.0"
description = "Mammography-based model for breast cancer risk"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "torch==2.3.1",
    "torchvision",
    "scikit-learn",
    "scipy",
    "numpy",
    "Pillow",
    "tqdm",
    "mock",
    "scikit-image",
    "imageio",
    "gitpython",
    "lifelines",
]
